2012-12-01  Giuseppe Scrivano  <gscrivano@gnu.org>

	* convert.c (lock_convert_mutex): New function.
	(THREAD_SAFE): Use `lock_convert_mutex'.
	(THREAD_SAFE_VOID): Likewise.

2012-11-28  Domenico Chierico <spaghetty@gmail.com>

	* Makefile.am (THREAD_LIB): Add -lpthread.
	* convert.h (register_download): Add definition.
	(convert_all_links): Likewise.
	(register_delete_file): Likewise.
	(register_redirection): Likewise.
	(register_css): Likewise.
	(register_html): Likewise.
	* convert.c: Remove static from register_download, convert_all_links,
	register_delete_file, register_redirection, register_css,
	register_html.
	* retr.c: Call register_html and register_css properly.

2012-11-29  Giuseppe Scrivano  <gscrivano@gnu.org>

	* http.c (pconn_lock): New function.
	(PCONN_LOCK): Use pconn_lock.
	(persistent_available_p): Change signature.
	(get_persistent): Change calls to persistent_available_p.

2012-10-07  Giuseppe Scrivano  <gscrivano@gnu.org>

	* wget.h (enum): Add THREADS_ERR and SEM_ERR.
	* recur.c (retrieve_tree): Use `pthread_join' to free a terminated
	thread resources.

2012-09-18  Ilim Ugur  <ilimugur@gmail.com>
	* metalink.c (elect_resources): Rewrite function definition, correcting
	faulty logic in branching statements.
	* metalink.c (elect_checksums): Rewrite function definition, correcting
	faulty logic in branching statements.
	* metalink.c (delete_mlink): Rename variables tempfile, tempres,
	tempcsum, temphash as file_temp, res_temp, csum_temp and phash_temp.
	* retr.c : Take functions elect_resources and elect_checksums out of
	comment brackets.

2012-09-17  Ilim Ugur  <ilimugur@gmail.com>

	* metalink.c : Add comments for functions delete_mlink, elect_checksums,
	elect_resources and parse_metalink.
	* metalink.h : Add prototypes of elect_resources and elect_checksums.
	* multi.c : Remove static variable temp.
	* options.h : Remove ifdefs that contain metalink_file member, due to
	the opt.metalink_file check made in an if statement in main.c.