@@ -2618,7 +2618,8 @@ read_header:
 #ifndef ENABLE_THREADS
       pconn.authorized = false;
 #else
-      pconn->authorized = false;
+      if (pconn)
+        pconn->authorized = false;
 #endif
       if (!auth_finished && (user && passwd))
         {
@@ -2709,7 +2710,8 @@ read_header:
 #ifndef ENABLE_THREADS
         pconn.authorized = true;
 #else
-        pconn->authorized = true;
+        if (pconn)
+          pconn->authorized = true;
 #endif
       }
     }
