@@ -1,3 +1,7 @@
+2012-12-02  Giuseppe Scrivano  <gscrivano@gnu.org>
+
+	* http.c (gethttp): Check for pconn before access it.
+
 2012-12-01  Giuseppe Scrivano  <gscrivano@gnu.org>
 
 	* convert.c (lock_convert_mutex): New function.
